# CG-Solar-System

./: .gitignore  LICENSE  README.md
Projeto/: CMakeLists.txt  generator  generator.cpp  sphere.3d
Projeto/demos/: solarsystem.xml  solarsystem2.xml  solarsystemrotate.xml
Projeto/engine/include/: catmull-rom.hpp  engine.hpp  matrix.hpp  model.hpp  xmlparser.hpp
Projeto/engine/include/config/: camera.hpp  config.hpp  group.hpp  light.hpp  material.hpp  model.hpp  modelfile.hpp  texture.hpp  transforms.hpp  window.hpp
Projeto/engine/include/parser/: xmlparser.hpp
Projeto/engine/src/: catmull-rom.cpp  engine.cpp  matrix.cpp  model.cpp  xmlparser.cpp
Projeto/engine/src/config/: camera.cpp  config.cpp  group.cpp  light.cpp  material.cpp  model.cpp  modelfile.cpp  texture.cpp  transforms.cpp  window.cpp
Projeto/engine/src/parser/: xmlparser.cpp
Projeto/generator/include/: generator.hpp
Projeto/generator/include/shapes/: box.hpp  cone.hpp  cylinder.hpp  patch.hpp  plane.hpp  sphere.hpp  torus.hpp
Projeto/generator/src/: generator.cpp
Projeto/generator/src/shapes/: box.cpp  cone.cpp  cylinder.cpp  patch.cpp  plane.cpp  sphere.cpp  torus.cpp
Projeto/include/: generator.h
Projeto/include/generator/: generator.h
Projeto/include/generator/shapes/: cone.h  sphere.h
Projeto/include/primitives/: box.h  plane.h  sphere.h
Projeto/models/: 100  2  cone_1_2_4_3.3d  plane_2_3.3d  sphere_1_10_10.3d  test.patch
Projeto/patches/: comet.patch
Projeto/src/: generator.cpp
Projeto/src/generator/: generator.cpp
Projeto/src/generator/shapes/: box.cpp  cone.cpp  plane.cpp  sphere.cpp
Projeto/src/primitives/: box.cpp  cone.cpp  plane.cpp  sphere.cpp
Projeto/test files/test_files_phase_1/: cylinder.xml  generic_cylinder.xml  test_1_1.xml  test_plane.xml
Projeto/test files/test_files_phase_2/: torus.xml
Projeto/test files/test_files_phase_3/: test_3_1.xml  test_comet.xml
Projeto/test files/test_files_phase_4/: test_4_1.xml  test_4_2.xml  test_4_6.xml
